# darkcoverage

./: .gitignore  LICENSE  README.md  pyproject.toml
darkcoverage/: __init__.py  gui.py  image_processing.py
darkcoverage/widgets/: __init__.py  image_label.py  reference_window.py  sliders_window.py
src/darkcoverage/: __init__.py  gui.py  image_processing.py  main.py
src/darkcoverage/widgets/: __init__.py  image_label.py  reference_window.py  sliders_window.py
