[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "darkcoverage"
version = "0.2.0"
description = "Image threshold analysis tool for measuring coverage"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.22.0",
    "pillow>=9.3.0",
    "pyside6>=6.4.0",
]
authors = [
    { name = "Tilen", email = "tilen.zel@gmail.com" }
]
maintainers = [
    { name = "Tilen", email = "tilen.zel@gmail.com" }
]
license = { text = "MIT" }
keywords = ["dark", "coverage", "image", "analysis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics :: Editors",
]

[project.urls]
"Homepage" = "https://github.com/TZ387/darkcoverage"
"Bug Tracker" = "https://github.com/TZ387/darkcoverage/issues"

[project.scripts]
darkcoverage = "darkcoverage.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/darkcoverage"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/Demonstration.png",
    "/Example.jpg",
]